--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Miteat</string>
+    <string name="settings">Settings</string>
+    <string name="logIn">Login</string>
+    <string name="myOrder">My Order</string>
+    <string name="help">Help</string>
+    <string name="booking">My Booking</string>
+
 </resources>
