--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
     <string name="app_name">Miteat</string>
     <string name="settings">Settings</string>
     <string name="logIn">Login</string>
+    <string name="my_meeting">My Meeting</string>
     <string name="myOrder">My Order</string>
     <string name="help">Help</string>
+    <string name="search">Search</string>
     <string name="booking">My Booking</string>
     <string name="google_place_api">AIzaSyA4BRvqWTo-4be58_YOIwImIW5Bq0PaEYI</string>
     <string name="title_activity_add_meeting">AddMeetingActivity</string>
